syntax = "proto3";

service TodoService {
    rpc createPermission(permissionUser) returns (Verified){}
    rpc deletePermission(permissionUser) returns (Verified){}
}

message Empty{}

message Verified{
    bool result = 1;
}

message permissionUser{
    string actionUser = 1;
    string resourceUser = 2;
}